Bug 770110: GC: gcIncrementalState is now used by non-incremental GCs r=billm